<resources>
    <string name="app_name">YourEuro</string>
    <string name="Open">My Application</string>
    <string name="Close">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="listOfAccounts">List of Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="balance">Balance</string>
    <string name="history">History</string>
    <string name="recents">Recents</string>
    <string name="note">Note:</string>
    <string name="net_balance">Net Balance:</string>
    <string name="income">INCOME</string>
    <string name="expense">EXPENSE</string>
    <string name="amount">Amount</string>
    <string name="details">Details</string>
    <string name="optional">*optional</string>
    <string name="description">Description</string>
    <string name="category">Category:</string>
    <string name="paymenttype">Payment type:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="recurring_transaction">Recurring transaction? </string>
    <string name="forgot_pin">Forgot PIN? </string>
    <string name="schedule">Schedule:</string>
    <string name="select_security_question">Select security Question: </string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="start_amount">Start amount:</string>
    <string name="end_amount">End amount:</string>
    <string name="filter">Filter</string>
    <string name="amount_range">Amount range:</string>
    <string name="date_range">Date range:</string>
    <string name="no_records_msg">Currently there are no records for display.</string>
    <string name="enter_old_pin">Enter Old PIN</string>
    <string name="old_pin">Old PIN:</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="new_pin">New PIN:</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="empty_pin">PIN is empty</string>
    <string name="statistic">Statistics</string>
    <string name="selectIcon">Icon</string>
    <string name="category_settings">Category Settings</string>
    <string name="list_of_categories">List of Categories:</string>
    <string name="new_category">New Category:</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="edit_icon">Edit icon</string>
    <string name="piechart">Pie chart</string>
    <string name="barchart">Bar chart</string>
    <string name="recurring_records">Recurring Records</string>

    <string-array name="paymenttypes_array">
        <item>Select payment type</item>
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>Bank Account</item>
        <item>Voucher</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="schedule_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="currencies">
        <item>Euro(€)</item>
        <item>Dollar($)</item>
        <item>Rupee(₹)</item>
        <item>Pound(£)</item>
    </string-array>

    <string-array name="currencyValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="questions">
        <item>Where did you go to school?</item>
        <item>What is your favorite sport?</item>
        <item>What city were you born in?</item>
        <item>What is your favorite book?</item>
        <item>What is your favorite food?</item>
    </string-array>

</resources>

