<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/unit2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <ToggleButton
                    android:id="@+id/togglebutton_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:checked="false"
                    android:textColor="@color/white"
                    android:textOff="@string/income"
                    android:textOn="@string/income" />

                <ToggleButton
                    android:id="@+id/togglebutton_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:checked="true"
                    android:textColor="@color/white"
                    android:textOff="@string/expense"
                    android:textOn="@string/expense" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/amount_textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/amount_et"
                        android:layout_width="@dimen/unit6"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/amount"
                        android:textSize="@dimen/unit4"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/unit1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/category_spinner"
                    android:text="@string/category"
                    android:textSize="@dimen/unit3_5"
                    android:paddingBottom="@dimen/unit1"/>

                <Spinner
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:id="@+id/category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="@dimen/unit4"
                    android:padding="@dimen/unit1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/unit1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/paymenttype_spinner"
                    android:text="@string/paymenttype"
                    android:textSize="@dimen/unit3_5"
                    android:paddingBottom="@dimen/unit1"/>

                <Spinner
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:id="@+id/paymenttype_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="@dimen/unit4"
                    android:padding="@dimen/unit1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit1"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="@dimen/unit3_5"
                        android:paddingBottom="@dimen/unit1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/unit3_5"
                            android:id="@+id/date_display"
                            android:text="test"
                            android:layout_weight="3"
                            android:layout_gravity="center"/>

                        <ImageView
                            android:layout_weight="1"
                            android:id="@+id/calendar_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/unit1"
                            android:src="@android:drawable/ic_menu_my_calendar"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="@dimen/unit3_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/unit3_5"
                            android:id="@+id/time_display"
                            android:text="test"
                            android:layout_weight="3"
                            android:paddingBottom="@dimen/unit1"
                            android:layout_gravity="center_vertical"/>

                        <ImageView
                            android:layout_weight="1"
                            android:id="@+id/time_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="@dimen/unit1"
                            android:src="@android:drawable/ic_lock_idle_alarm"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/unit1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/amount_et"
                    android:text="@string/note"
                    android:textSize="@dimen/unit3_5" />

                <EditText
                    android:id="@+id/note_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:singleLine="true" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>