<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"        android:id="@+id/account_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/unit2"
    android:elevation="@dimen/unit2"
    android:padding="@dimen/unit1"
    app:cardElevation="@dimen/unit4"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/unit3"
                android:text="@string/balance"
                android:textSize="@dimen/unit4"
                android:layout_weight="4"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_account"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:onClick="addAccount"
                android:clickable="true" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_balance_rv">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:background="@color/highlight_green"
            android:id="@+id/net_balance_ll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/unit3"
                android:text="@string/net_balance"
                android:layout_weight="4"/>

            <TextView
                android:id="@+id/cash_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/unit3"
                android:text="Total"
                android:textColor="@color/green"
                android:textSize="@dimen/unit3"
                android:layout_weight="1"
                android:textAlignment="viewEnd"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/add_account"-->
                <!--android:id="@+id/btn_add_account"/>-->

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/history" />-->

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
